Fri Jun 12 11:51:20 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* preferences/krb5-auth-dialog-preferences.desktop.in: use
	  krb-valid-ticket icon instead of abusing gtk-dialog-authentication
	* preferences/krb5-auth-dialog-preferences.xml: likewise
	* src/krb5-auth-dialog.xml: likewise
	* src/krb5-auth-applet.c (ka_send_event_notificatyion): likewise
	  (ka_applet_update_status): use icons in notifications
	  (ka_applet_create): load uixml after calling
	  gtk_icon_theme_append_search_path
	  (ka_applet_setup_icons): use DATA_DIR instead of PKG_DATA_DIR
	  (ka_applet_cb_about_dialog): add "logo-icon-name"
	* src/krb5-auth-dialog.c: uixml parsing moved to ka_applet_create...
	* src/krb5-auth-applet.h: ...so drop unused parameter

Fri Jun 12 11:45:30 CEST 2009 Guido Günther <agx@sigxcpu.org>

	add scalable and 48x48 icons and move them from pkgdatadir to datadir.
	Makes using different icon themes easier.
	* configure.ac (AC_OUTPUT): add icon dirs
	* src/Makefile.am (rb5_auth_dialog_CPPFLAGS): define DATADIR
	* icons/*.png: move 22x22 icons from ...here
	* icons/22x22: ..to here
	* icons/scalable: new icons
	* icons/48x48: likewise

Tue Jun  2 00:01:16 CEST 2009 Guido Günther <agx@sigxcpu.org>

	launch prefs with full path
	* src/Makefile.am: define BIN_DIR
	* src/krb5-auth-applet.c (ka_applet_cb_preferences): use it

Mon Jun  1 23:12:42 CEST 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-dialog (ka_error_dialog): set application name
	  in error dialog

Mon Jun  1 20:05:17 CEST 2009 Guido Günther <agx@sigxcpu.org>

	enable help in applet and prefs dialog
	* src/krb5-auth-tools.c: new file
	* src/krb5-auth-tools.h: likewise
	* po/POTFILES.in: add src/krb5-auth-tools.h, remove duplicate
	  src/krb5-auth-dialog.schemas.in
	* preferences/Makefile.am (krb5_auth_dialog_sources): add
	  krb5-auth-tools.[ch]
	* src/Makefile.am (krb5_auth_dialog_preferences_SOURCES): add
	  $(top_srcdir)/krb5-auth-tools.[ch]
	* preferences/krb5-auth-dialog-preferences.c