@@ -5,3 +5,5 @@ Guido Günther <agx@sigxcpu.org>
 
 Patches have been contributed by:
 Matthias Clasen <mclasen@redhat.com>
+Christian Persch <chpe@gnome.org>
+
